--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,16 @@ altgraph==0.17
     #   pyinstaller
 click==7.1.2
     # via pip-tools
+et-xmlfile==1.0.1
+    # via openpyxl
 macholib==1.14
     # via pyinstaller
+numpy==1.20.1
+    # via pandas
+openpyxl==3.0.7
+    # via -r requirements.in
+pandas==1.2.3
+    # via -r requirements.in
 pip-tools==5.5.0
     # via -r requirements.in
 pyinstaller-hooks-contrib==2021.1
@@ -22,7 +30,15 @@ pyqt5-sip==12.8.1
     # via pyqt5
 pyqt5==5.13.0
     # via -r requirements.in
+python-dateutil==2.8.1
+    # via pandas
+pytz==2021.1
+    # via pandas
 qasync==0.13.0
+    # via -r requirements.in
+six==1.15.0
+    # via python-dateutil
+xlrd==2.0.1
     # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
